Fix text alignment property in style.css

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
   font-size: 160px  ;
   font-style: italic;
   color: bisque;
-  text: center;
+  text-align: center;
 }
 
 p {
